[gd_scene load_steps=7 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://unknown.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 35.0

[sub_resource type="CircleShape2D" id=3]
radius = 35.0

[sub_resource type="CircleShape2D" id=2]
radius = 35.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Unknown" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 405, 290 )
scale = Vector2( 1.08375, 1.04587 )
texture = ExtResource( 3 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 50, 75 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Icon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon/Area2D"]
position = Vector2( 1, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 50, 175 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( -1, -2 )
shape = SubResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 50, 275 )

[node name="Area2D" type="Area2D" parent="Sprite2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2/Area2D"]
shape = SubResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 50, 375 )

[node name="Area2D" type="Area2D" parent="Sprite3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/Area2D"]
shape = SubResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 50, 475 )

[node name="Area2D" type="Area2D" parent="Sprite4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite4/Area2D"]
shape = SubResource( 2 )

[connection signal="input_event" from="Icon/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event2"]
[connection signal="input_event" from="Sprite2/Area2D" to="." method="_on_Area2D_input_event3"]
[connection signal="input_event" from="Sprite3/Area2D" to="." method="_on_Area2D_input_event4"]
[connection signal="input_event" from="Sprite4/Area2D" to="." method="_on_Area2D_input_event5"]
